add solr stream download, missing tests, also have to fix UniRef Test